# ai-toolkit

./: .dockerignore  .env.exemple  .gitignore  Dockerfile  README.md  bootstrap.ps1  bootstrap.sh  config.py  config.yaml  converter.py  docker-compose.yml  main.py  pyproject.toml  speech_to_text.py  time_method.py  yt_audio_downloader.py
src/: audio_video_converter.py  bionic_reading.py  config.py  converter.py  enums.py  lm_studio.py  main.py  python_tools.py  speech_to_text.py  speech_to_text_voxtral.py  speech_to_text_whisper.py  split_audio.py  yt_audio_downloader.py  yt_downloader.py
src/workflows/: movie_transcription.py
unittests/: lm_studio_.py  movie_transcription_.py
unittests/files/: str.str
