[project]
name = "ai-toolkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "ffmpeg>=1.4",
    "huggingface-hub>=0.36.0",
    "librosa>=0.11.0",
    "mistral-common[audio]>=1.8.8",
    "pydub>=0.25.1",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.3",
    "yt-dlp>=2025.12.8",
]
