[project]
name = "ai-toolkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "bionic-writer>=0.1.0",
    "colorama>=0.4.6",
    "deptry>=0.24.0",
    "ffmpeg>=1.4",
    "librosa>=0.11.0",
    "lmstudio>=1.5.0",
    "mistral-common[audio]>=1.9.0",
    "pydub>=0.25.1",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "transformers>=4.57.3",
    "yt-dlp>=2025.12.8",
]
